<resources>
    <string name="app_name">练习</string>
    <string name="phone">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="pass_word">密    码</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="registration">注册</string>
    <string name="code">验证码</string>
    <string name="hint_code">输入验证码</string>
    <string name="password_again">再次输入密码</string>
</resources>
