<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:maxLength="11" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/pass_word" />

        <EditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"

        >
        <ImageButton
            android:id="@+id/qq"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/qq" />
    </RelativeLayout>

</LinearLayout>
